--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					</div>
 					<!-- /col -->
 					<div class="col col-4">
-						<p class="default-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aspernatur quasi perferendis ipsum repudiandae atque, quia quos? Iusto sit, consecteturghj, hicjhgjh quam vitae possimus magni maxime odit obcaecati veritatis illo?</p>
+						<p class="default-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aspernatur quasi perferendis ipsum repudiandae atque, quia quos? Iusto sit, consectghghfgeturghj, hicjhgjh quam vitae possimus magni maxime odit obcaecati veritatis illo?</p>
 					</div>
 					<!-- /col -->
 				</div>
