--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<div class="col col-4">
 							<div class="icon text-center"><span class="icon-hotairballoon"></span></div>
 							<div class="title text-center"><span>We have magic</span></div>
-							<p class="default-text">Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta. Nulla facilisi. Suspendisse ultricies eros blandit.</p>
+							<p class="default-text">Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placegjhgjhrat ex gravida nibh tristique porta. Nulla facilisi. Suspendisse ultricies eros blandit.</p>
 						</div>
 					</div>
 					<!-- /row -->
