--- a/guide.html
+++ b/guide.html
@@ -131,5 +131,30 @@
 			
 		</div>
 	</div>
+	<!-- /grid -->
+
+	<!-- form-elements -->
+	<div class="default-section guide-section">
+		<div class="container">
+			<div class="title section-title-light">
+				<span>Form elements</span>
+			</div>
+			<div class="row">
+				<div class="col col-6">
+					<form>
+						<input type="text" name="name" class="form-control" placeholder="name">
+						<input type="text" name="email" class="form-control" placeholder="email">
+						<textarea name="message" class="form-control" placeholder="message"></textarea>
+						<input type="text" name="name" class="form-control disabled" placeholder="Disabled" disabled>
+						<input type="text" name="email" class="form-control" placeholder="email" value="example@gmail.com">
+						<input type="text" name="email" class="form-control error" placeholder="email">
+						<input type="submit" value="Send" class="btn btn-black">
+						<button type="submit" class="btn btn-black">Send message</button>
+						<button type="submit" class="btn btn-black" disabled>disabled button</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
