--- a/index.html
+++ b/index.html
@@ -26,34 +26,18 @@
 	<!-- HEADER START -->
 	<div class="header">
 		<div class="container-fluid">
-			<div class="logo">
-				<a href="#">
-					<img src="img/logo.png" alt="logo">
-				</a>
-			</div>
+			<div class="logo"><a href="#"><img src="img/logo.png" alt="logo"></a></div>
 			<!-- logo -->
-
 			<ul class="header-nav">
-				<li>
-					<a href="#">Home</a>
-				</li>
-				<li>
-					<a href="#">About</a>
-				</li>
-				<li>
-					<a href="#">services</a>
-				</li>
-				<li>
-					<a href="#">works</a>
-				</li>
-				<li>
-					<a href="#">contact</a>
-				</li>
+				<li><a href="#" data-scroll=".inner">Home</a></li>
+				<li><a href="#" data-scroll=".about-studio">About</a></li>
+				<li><a href="#" data-scroll=".services">services</a></li>
+				<li><a href="#" data-scroll=".portfolio">works</a></li>
+				<li><a href="#" data-scroll=".contacts">contact</a></li>
 			</ul>
 			<!-- /header nav -->
 		</div>
 		<!-- /container-fluid -->
-
 	</div>
 	<!-- header end -->
 
@@ -62,8 +46,10 @@
 			<div class="inner-content">
 				<h1 class="h1 title title-white">Thomas Rhythm</h1>
 				<span class="span">Extraordinary art director & creative minimalism lover</span>
+				<div class="rhomb-icon white"><i class="fa fa-angle-down"></i></div>
 			</div>
 			<!-- /inner-content -->
+
 		</div>
 		<!-- /inner -->
 
@@ -99,7 +85,36 @@
 							<div class="team-item">
 								<div class="team-item-img">
 									<img src="img/team-item1.jpg" alt="Thomas Rhythm">
-									<div class="team-item-skills"></div>
+									<div class="team-item-skills">
+										<div class="title title-white">
+											<span class="skills">Skills</span>
+											<p>Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.</p>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Branding</span>
+											<div class="progress-wrapp">
+												<div class="progress branding"></div>
+											</div>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Design</span>
+											<div class="progress-wrapp">
+												<div class="progress design"></div>
+											</div>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Development</span>
+											<div class="progress-wrapp">
+												<div class="progress development"></div>
+											</div>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Photography</span>
+											<div class="progress-wrapp">
+												<div class="progress photography"></div>
+											</div>
+										</div>
+									</div>
 								</div>
 								<div class="team-item-info text-center">
 									<span class="team-item-name title">Thomas Rhythm</span>
@@ -111,7 +126,36 @@
 							<div class="team-item">
 								<div class="team-item-img">
 									<img src="img/team-item2.jpg" alt="Marta Laning">
-									<div class="team-item-skills"></div>
+									<div class="team-item-skills">
+										<div class="title title-white">
+											<span class="skills">Skills</span>
+											<p>Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.</p>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Branding</span>
+											<div class="progress-wrapp">
+												<div class="progress branding"></div>
+											</div>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Design</span>
+											<div class="progress-wrapp">
+												<div class="progress design"></div>
+											</div>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Development</span>
+											<div class="progress-wrapp">
+												<div class="progress development"></div>
+											</div>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Photography</span>
+											<div class="progress-wrapp">
+												<div class="progress photography"></div>
+											</div>
+										</div>
+									</div>
 								</div>
 								<div class="team-item-info text-center">
 									<span class="team-item-name title">Marta Laning</span>
@@ -123,7 +167,36 @@
 							<div class="team-item">
 								<div class="team-item-img">
 									<img src="img/team-item3.jpg" alt="Steve ANDERS">
-									<div class="team-item-skills"></div>
+									<div class="team-item-skills">
+										<div class="title title-white">
+											<span class="skills">Skills</span>
+											<p>Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.</p>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Branding</span>
+											<div class="progress-wrapp">
+												<div class="progress branding"></div>
+											</div>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Design</span>
+											<div class="progress-wrapp">
+												<div class="progress design"></div>
+											</div>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Development</span>
+											<div class="progress-wrapp">
+												<div class="progress development"></div>
+											</div>
+										</div>
+										<div class="skill-item">
+											<span class="scill-name">Photography</span>
+											<div class="progress-wrapp">
+												<div class="progress photography"></div>
+											</div>
+										</div>
+									</div>
 								</div>
 								<div class="team-item-info text-center">
 									<span class="team-item-name title">Steve ANDERS</span>
@@ -499,7 +572,6 @@
 		</div>
 		<!--/why-choose -->
 
-		<!-- Reviews -->
 		<div class="reviews bg-black">
 			<div class="reviews-carousel">
 				<div>
@@ -510,7 +582,7 @@
 						</div>
 						<!--  /title-->
 						<p>Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue,
-risus utaliquam dapibus. Thanks!</p>
+						risus utaliquam dapibus. Thanks!</p>
 						<span class="review-author">— John Doe, doodle inc.</span>
 					</div>
 					<!-- slide-content -->
@@ -610,7 +682,8 @@ risus utaliquam dapibus. Thanks!</p>
 				<!-- /row -->
 			</div>
 		</div>
-		<!-- latest-news -->
+		<!-- / latest-news -->
+
 		<div class="small-section subscribe bg-grey text-center">
 			<div class="container">
 				<div class="title section-title-light">
@@ -622,117 +695,158 @@ risus utaliquam dapibus. Thanks!</p>
 					<button type="submit" class="btn btn-black">Subscribe</button>
 				</form>
 				<div class="form-info">
-					<span>
-						<i class="fa fa-info-circle"></i>Please trust us, we will never send you spam</span>
-					</div>
+					<span><i class="fa fa-info-circle"></i>Please trust us, we will never send you spam</span>
 				</div>
-				<!-- /container -->
 			</div>
-			<!-- /subscribe -->
-			<div class="default-section contacts">
-				<div class="container">
-					<div class="title section-title text-center">
-						<span>Contacts</span>
-					</div>
-					<!-- title -->
-					<div class="row">
-						<div class="col col-8 m-auto">
-							<div class="contact-items-wrapper">
-								<div class="row">
-									<div class="col col-4">
-										<div class="contact-item">
-											<div class="rhomb-icon black-icon contact-item-icon">
-												<i class="fa fa-phone"></i>
-											</div>
-											<div class="contact-item-content">
-												<span class="contact-title">Call us</span>
-												<span class="contact-data">7777555125</span>
-											</div>
-										</div>
-									</div>
-									<!-- /col -->
-									<div class="col col-4">
-										<div class="contact-item">
-											<div class="rhomb-icon black-icon contact-item-icon">
-												<i class="fa fa-map-marker"></i>
-											</div>
-											<div class="contact-item-content">
-												<span class="contact-title">Address</span>
-												<span class="contact-data">245 Quigley Blvd, Ste K</span>
-											</div>
-										</div>
-									</div>
-									<!-- /col -->
-									<div class="col col-4">
-										<div class="contact-item">
-											<div class="rhomb-icon black-icon contact-item-icon">
-												<i class="fa fa-envelope"></i>
-											</div>
-											<div class="contact-item-content">
-												<span class="contact-title">Email</span>
-												<span class="contact-data">support@bestlooker.pro</span>
-											</div>
-										</div>
-									</div>
-									<!-- /col -->
-								</div>
-								<!-- /row -->
-							</div>
-							<!-- / contact-items-wrapper-->
-							<form class="contact-form">
-
-							</form>
-							<!--  /contact-form-->
-						</div>
-						<!-- /col -->
-					</div>
-					<!-- /row -->
-				</div>
-				<!-- /container -->
-			</div>
-			<!-- /contacts -->
-
+			<!-- /container -->
 		</div>
-		<!-- /main end -->
-		<div class="footer small-section text-center">
+		<!-- / subscribe -->
+
+		<div class="default-section contacts">
 			<div class="container">
-				<div class="up">
-					<div class="logo-up">
-						<a href="#">
-							<img src="img/logo-footer.jpg" alt="logo">
-						</a>
+				<div class="title section-title text-center"><span>Contacts</span>
+				</div>
+				<!-- title -->
+				<div class="row">
+					<div class="col col-8 m-auto">
+						<div class="contact-items-wrapper">
+							<div class="row">
+								<div class="col col-4">
+									<div class="contact-item">
+										<div class="rhomb-icon black-icon contact-item-icon">
+											<i class="fa fa-phone"></i>
+										</div>
+										<div class="contact-item-content">
+											<span class="contact-title">Call us</span>
+											<span class="contact-data">7777555125</span>
+										</div>
+									</div>
+								</div>
+								<!-- /col -->
+								<div class="col col-4">
+									<div class="contact-item">
+										<div class="rhomb-icon black-icon contact-item-icon">
+											<i class="fa fa-map-marker"></i>
+										</div>
+										<div class="contact-item-content">
+											<span class="contact-title">Address</span>
+											<span class="contact-data">245 Quigley Blvd, Ste K</span>
+										</div>
+									</div>
+								</div>
+								<!-- /col -->
+								<div class="col col-4">
+									<div class="contact-item">
+										<div class="rhomb-icon black-icon contact-item-icon">
+											<i class="fa fa-envelope"></i>
+										</div>
+										<div class="contact-item-content">
+											<span class="contact-title">Email</span>
+											<span class="contact-data">support@bestlooker.pro</span>
+										</div>
+									</div>
+								</div>
+								<!-- /col -->
+							</div>
+							<!-- /row -->
+						</div>
+						<!-- / contact-items-wrapper-->
+						<form class="contact-form">
+							<div class="form-col">
+								<input type="text" name="user-name" id="user-name" class="form-control" placeholder="name">
+								<input type="text" name="user-email" id="user-email" class="form-control" placeholder="email">
+							</div>
+							<div class="form-col">
+								<textarea name="user-message" id="user-message" placeholder="messege" class="form-control"></textarea>
+							</div>
+							<div class="form-info pull-left">
+								<span><i class="fa fa-info-circle"></i>All the fields are required</span>
+							</div>
+							<!-- / form info -->
+							<button type="submit" class="btn btn-black pull-right">submit messege</button>
+						</form>
+						<!--  /contact-form-->
 					</div>
-					<div class="rhomb-icon transporent-icon contact-item-icon">
-						<i class="fa fa-facebook"></i>
+					<!-- /col -->
+				</div>
+				<!-- /row -->
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /contacts -->
+
+		<div class="map-container">	
+			<div id="map"></div>
+			<div class="on-map-block">
+				<div class="map-icon text-center">
+					<div class="rhomb-icon rhomb-map">
+						<i class="fa fa-map-marker"></i>
 					</div>
-					<div class="rhomb-icon transporent-icon contact-item-icon">
-						<i class="fa fa-twitter"></i>
-					</div>
-					<div class="rhomb-icon transporent-icon contact-item-icon">
-						<i class="fa fa-behance"></i>
-					</div>
-					<div class="rhomb-icon transporent-icon contact-item-icon">
-						<i class="fa fa-question"></i>
-					</div>
-					<div class="rhomb-icon transporent-icon contact-item-icon">
-						<i class="fa fa-btc"></i>
+					<div class="open title title-white">
+						<span>Open the map </span>
+						<i class="fa fa-angle-down"></i>
 					</div>
 				</div>
-				<div class="bottom">
-					<span class="rhythm">	<i class="fa fa-copyright"></i>Rhythm 2014</span>
-					<span class="made">Made with love for great people</span>
+				
+				
+			</div>
+		</div>	
+		<!-- / map -->
+	</div>
+	<!-- /main end -->
+
+	<div class="footer small-section text-center">
+		<div class="container">
+			<div class="up">
+				<div class="logo-up">
+					<a href="#">
+						<img src="img/logo-footer.jpg" alt="logo">
+					</a>
+				</div>
+				<div class="rhomb-icon transporent-icon contact-item-icon">
+					<i class="fa fa-facebook"></i>
+				</div>
+				<div class="rhomb-icon transporent-icon contact-item-icon">
+					<i class="fa fa-twitter"></i>
+				</div>
+				<div class="rhomb-icon transporent-icon contact-item-icon">
+					<i class="fa fa-behance"></i>
+				</div>
+				<div class="rhomb-icon transporent-icon contact-item-icon">
+					<i class="fa fa-question"></i>
+				</div>
+				<div class="rhomb-icon transporent-icon contact-item-icon">
+					<i class="fa fa-btc"></i>
 				</div>
 			</div>
+			<div class="bottom">
+				<span class="rhythm">	<i class="fa fa-copyright"></i>Rhythm 2014</span>
+				<span class="made">Made with love for great people</span>
+			</div>
 		</div>
+	</div>
+	
+	<!-- Arrow up -->
+	<div class="arrow-up " data-scroll="inner">
+		<i class="fa fa-caret-up"></i>
+	</div>
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<!-- jQuery UI -->
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<!-- google map api -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAv6c75LXSXD0yGB-1D2-h6hK8KKdWr6gE&callback=initMap" async defer></script>
+	<!-- init Google map -->
+	<script src="js/google-map.js"> </script>
+	<!-- Plugins -->
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+	<!-- show header on scroll -->
+	<script src="js/header-scroll.js"></script>
+	<script src="js/scroll-to.js"></script>
+	<!-- Init plugins -->
 
-		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-		<!-- jQuery UI -->
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-		<!-- Plugins -->
-		<script  src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-		<!-- Init plugins -->
-		<script src="js/init.js"></script>
-	</body>
+	<script src="js/init.js"></script>
+</body>
 
-	</html>
+</html>
+<!-- AIzaSyAv6c75LXSXD0yGB-1D2-h6hK8KKdWr6gE -->
