--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 							<div class="title text-center">
 								<span>We have magic</span>
 							</div>
-							<p class="default-text">Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placegjhgjhgit addrat ex gravida nibh tristique
+							<p class="default-text">Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placjhgsjhjegjhgjhgit addrat ex gravida nibh tristique
 							porta. Nulla facilisi. Suspendisse ultricies eros blandit.</p>
 						</div>
 					</div>
