--- a/guide.html
+++ b/guide.html
@@ -150,7 +150,7 @@
 						<input type="text" name="email" class="form-control error" placeholder="email">
 						<input type="submit" value="Send" class="btn btn-black">
 						<button type="submit" class="btn btn-black">Send message</button>
-						<button type="submit" class="btn btn-black" disabled>disabled button</button>
+						<button type="submit" class="btn btn-black" disabled>disabled button.</button>
 					</form>
 				</div>
 			</div>
