--- a/index.html
+++ b/index.html
@@ -741,10 +741,10 @@
 				</div>
 				<!-- title -->
 				<div class="row">
-					<div class="col col-8 col-md-12 m-auto">
+					<div class="col col-8 col-md-8 col-xs-12 m-auto">
 						<div class="contact-items-wrapper">
 							<div class="row">
-								<div class="col col-4 col-xs-12">
+								<div class="col col-4 col-md-12">
 									<div class="contact-item">
 										<div class="rhomb-icon black-icon contact-item-icon">
 											<i class="fa fa-phone"></i>
@@ -756,7 +756,7 @@
 									</div>
 								</div>
 								<!-- /col -->
-								<div class="col col-4 col-xs-12">
+								<div class="col col-4 col-md-12">
 									<div class="contact-item">
 										<div class="rhomb-icon black-icon contact-item-icon">
 											<i class="fa fa-map-marker"></i>
@@ -768,7 +768,7 @@
 									</div>
 								</div>
 								<!-- /col -->
-								<div class="col col-4 col-xs-12">
+								<div class="col col-4 col-md-12">
 									<div class="contact-item">
 										<div class="rhomb-icon black-icon contact-item-icon">
 											<i class="fa fa-envelope"></i>
