--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
 	</div>
 	
 	<!-- Arrow up -->
-	<div class="arrow-up " data-scroll="inner">
+	<div class="arrow-up " data-scroll=".inner">
 		<i class="fa fa-caret-up"></i>
 	</div>
 	<!-- jQuery -->
